--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -40,7 +40,7 @@
       div isbn: {{ object.isbn }}
       a(target="_blank", href="{{ object.details_url }}") {% trans "source" %}: {{ object.data_source }}
 
-      div {% trans "Category" %}: {{ object.category }}
+      div {% trans "Shelf" %}: {{ object.shelf }}
 
       div.panel.panel-default {% trans "Comment" %}
        div.panel-heading
