--- a/templates/search/inventories.jade
+++ b/templates/search/inventories.jade
@@ -37,30 +37,39 @@ table.table.table-striped.table-hover
   for inv in inventories
     tr
       td {{ inv.created }}
-      if inv.place
-        td {{ inv.place }}
+      if inv.shelf
+        td {{ inv.shelf }}
       else
-        td {{ inv.basket }}
+        if inv.place
+          td {{ inv.place }}
+        else
+          td {{ inv.basket }}
       td
         a(href="{{ inv.id }}")
           button.btn.btn-primary {% trans "Continue" %}
         a(href="{{ inv.id }}/delete")
           button.btn.btn-danger {% trans "Delete" %}
 
-//- a.btn.btn-primary(href="{% url 'inventory_new' %}") {% trans "New..." %}
-
 div(ng-controller="InventoryModalController")
   script(type="text/ng-template", id="modalContent.html")
     div.modal-header
-      h3.modal-title {% trans "What place are you doing the inventory of ?" %}
+      h3.modal-title {% trans "What are you doing the inventory of ?" %}
 
     div.modal-body
-      //- div {{ 'items ' | ng }}
-      //- div {{ 'item.name ' | ng }}
-      form.form-inline
-        select.form-control(ng-model="place", ng-options="it.name for it in items", required)
-        button.btn.btn-primary(ng-click="ok()") {% trans "Ok" %}
-        button.btn.btn-cancel(ng-click="cancel()") {% trans "Cancel" %}
+     .row
+        .col-md-6
+            h4 {% trans "A shelf" %}
+            form.form-inline
+              select.form-control(ng-model="shelf", ng-options="it.fields.name for it in shelfs")
+            button.btn.btn-primary(ng-click="ok()") {% trans "Ok" %}
+            button.btn.btn-cancel(ng-click="cancel()") {% trans "Cancel" %}
+
+        .col-md-6
+            h4 {% trans "A whole place" %}
+            form.form-inline
+                    select.form-control(ng-model="place", ng-options="it.name for it in places", required)
+            button.btn.btn-primary(ng-click="ok()") {% trans "Ok" %}
+            button.btn.btn-cancel(ng-click="cancel()") {% trans "Cancel" %}
 
   button.btn.btn-primary(ng-click="open('lg')") {% trans "New" %}
 
