--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -29,7 +29,7 @@ h3 {% trans "Search for new titles" %}
 div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
 
  div
-    alert(
+    uib-alert(
       ng-repeat="alert in alerts"
       type="{{ 'alert.level' | ng }}"
       close="closeAlert($item)"
