--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -68,9 +68,15 @@ div(ng-cloak, ng-show="cards", ng-controller="collectionController")
           ng-model="publisher"
           ng-options="elt.fields.name for elt in publishers")
 
+    div
+      label.col-sm-4 {% trans "Distributor" %}
+      div.col-md-8
+        select.form-control(
+          ng-model="distributor"
+          ng-options="elt.repr for elt in distributors")
+
    .col-md-6
-    form
-     div.form-group
+    div.form-group
         label.col-sm-4 {% trans "Places" %}
         div.col-md-8
           select.form-control(
