--- a/templates/search/basket_auto_command.jade
+++ b/templates/search/basket_auto_command.jade
@@ -71,20 +71,20 @@ div(ng-cloak, ng-controller="basketToCommandController")
               th {% trans "To command" %}
             tbody
               tr(ng-repeat="card in cards")
-                td: a(href="{{ 'card.get_absolute_url' | ng}}") {{ 'card.title' | ng }}
-                td {{ 'card.price' |ng }} €
-                td {{ 'card.quantity' |ng }}
-                td
+                td.col-md-7: a(href="{{ 'card.get_absolute_url' | ng}}") {{ 'card.title' | ng }}
+                td.col-md-1 {{ 'card.price' |ng }} €
+                td.col-md-1 {{ 'card.quantity' |ng }}
+                td.col-md-1
                   input.my-number-input(type="number", min=0, max=99,
                     ng-model="card.basket_qty"
                     ng-change="save_quantity(pub_id, $index)")
                   i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection(pub_id, $index)", style="padding-left: 1em;", title='{% trans "Remove from list" %}')
 
               tr
-                td {% trans "Total" %}
-                td {{ 'get_total_price(pub_id)' |ng}}  €
-                td
-                td {{'get_total_copies(pub_id)'|ng}}
+                td.col-md-7 {% trans "Total" %}
+                td.col-md-1 {{ 'get_total_price(pub_id)' |ng}}  €
+                td.col-md-1
+                td.col-md-1 {{'get_total_copies(pub_id)'|ng}}
 
   // we'll use the modal shortly !
   script(type="text/ng-template", id="commandModal.html")
