--- a/templates/search/inventory_terminate.jade
+++ b/templates/search/inventory_terminate.jade
@@ -30,8 +30,21 @@ div(ng-controller="inventoryTerminateController")
     div.panel-heading {% trans "Help" %}
     div.panel-body {% trans "Here you can compare the inventory with the real stock, and take actions, like exporting a bill in pdf or update the stock." %}
 
-  div.panel.panel-warning
-    div.panel-heading {% trans "Coming soon:" %}
+  div(ng-if="is_no_origin").panel.panel-warning
+    div.panel-heading
+    div.panel-body {% trans "Warning: we inventoried some cards that were not here originally." %} (x {{'obj_length(no_origin)'|ng}})
+
+  div(ng-if="is_missing").panel.panel-warning
+    div.panel-heading
+    div.panel-body {% trans "Warning: some cards are missing in the inventory." %} (x {{'obj_length(missing)'|ng}})
+
+  div(ng-if="is_less_in_inv").panel.panel-info
+    div.panel-heading
+    div.panel-body {% trans "We are missing copies of some cards" %} (x {{'obj_length(less_in_inv)'|ng}})
+
+  div(ng-if="is_more_in_inv").panel.panel-info
+    div.panel-heading
+    div.panel-body {% trans "We inventoried some cards with more copies than planned" %} (x {{'obj_length(more_in_inv)'|ng}})
 
   .row
    .col-md-1
@@ -46,14 +59,15 @@ div(ng-controller="inventoryTerminateController")
    table.table.table-condensed.table-striped.table-hover(datatable='ng')
      thead
        th {% trans "Title" %}
-       th {% trans "Qty inventory" %}
        th {% trans "Qty origin" %}
+       th {% trans "Qty inventory" %}
        th {% trans "Difference" %}
+
      tbody
       tr(ng-repeat="(id, data) in diff")
         td {{ 'data.card.title'|ng }}
-        td {{ 'data.inv' | ng}}
         td {{ 'data.stock' | ng}}
+        td {{ 'data.inv' | ng}}
         td {{ 'data.diff' |ng }}
 
    button.btn.btn-primary(ng-click='validate()') {% trans "Validate" %}
