--- a/templates/base.jade
+++ b/templates/base.jade
@@ -25,6 +25,7 @@ html(ng-app="abelujo")
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/angular-ui-select/dist/select.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/datatables/media/css/jquery.dataTables.min.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/angular-loading-bar/build/loading-bar.min.css" %}')
+    link(rel='stylesheet', type='text/css', href='{% static "bower_components/angular-hotkeys/build/hotkeys.min.css" %}')
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
