Baskets UI - colorful menu buttons

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -46,7 +46,7 @@ div(ng-cloak, ng-controller="basketsController")
    .col-md-6
 
     .btn-group
-     button.btn.btn-default.dropdown-toggle(type="button", data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false") {% trans "Action" %}
+     button.btn.btn-info.dropdown-toggle(type="button", data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false") {% trans "Action" %}
        span.caret
 
      ul.dropdown-menu
@@ -62,7 +62,7 @@ div(ng-cloak, ng-controller="basketsController")
        li: a(href="http://abelujo.cc/docs/lists/", target="_blank") {% trans "Help" %}
 
     .btn-group
-     button.btn.btn-default.dropdown-toggle(data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
+     button.btn.btn-success.dropdown-toggle(data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
        span.caret
 
      ul.dropdown-menu
